Comit al master de blogpost en su versi{on mas reciente version

--- a/blogspot.html
+++ b/blogspot.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -7,11 +7,11 @@
     <title>Title post</title>
 </head>
 <body>
-    <div>
-        <head>
+    <div id="container">
+        <div id="post">
             <h1>Git and GitHub</h1>
-            <h3>with Freedy Vega</h3>
-        </head>
+            <p>with Freedy Vega</p>
+        </div>
     </div>
 </body>
 </html>
