--- a/blogspot.html
+++ b/blogspot.html
@@ -11,6 +11,7 @@
         <div id="post">
             <h1>Git and GitHub</h1>
             <p>with Freedy Vega</p>
+            <p>The blog is the best practice.</p>
         </div>
     </div>
 </body>
