--- a/blogspot.html
+++ b/blogspot.html
@@ -8,6 +8,9 @@
 </head>
 <body>
     <div id="container">
+        <div id="cabecera">
+            Hyperblog <span id="tagline">The best blog</span>
+        </div>
         <div id="post">
             <h1>Git and GitHub</h1>
             <p>with Freedy Vega</p>
