Add head, color and h1

--- a/blogspot.html
+++ b/blogspot.html
@@ -9,12 +9,13 @@
 <body>
     <div id="container">
         <div id="cabecera">
-            Hyperblog <span id="tagline">The best blog</span>
+            Hyperblog <span id="tagline">Head of Master</span>
         </div>
         <div id="post">
             <h1>Git and GitHub</h1>
             <p>with Freedy Vega</p>
             <p>The blog is the best practice.</p>
+            <h1>Suscribe and like</h1>
         </div>
     </div>
 </body>
