--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div>
         <head>
-            <h1>Git and Github with Fredy</h1>
+            <h1>Git and Github with Fredy Vega</h1>
         </head>
     </div>
 </body>
