--- a/blogspot.html
+++ b/blogspot.html
@@ -17,6 +17,9 @@
             <p>The blog is the best practice.</p>
             <h1>Suscribe and like</h1>
         </div>
+        <div id="footer">
+            Awesome
+        </div>
     </div>
 </body>
 </html>
