--- a/blogspot.html
+++ b/blogspot.html
@@ -18,6 +18,9 @@
             <p>The blog is the best practice.</p>
             <h1>Suscribe and like</h1>
         </div>
+        <div id="footer">
+            <h2>Awesome</h2>
+        </div>
     </div>
 </body>
 </html>
