--- a/blogspot.html
+++ b/blogspot.html
@@ -9,7 +9,7 @@
 <body>
     <div id="container">
         <div id="cabecera">
-            Hyperblog 2.0 <span id="tagline">Head of head</span>
+            Hyperblog <b>2.0</b> <span id="tagline">Head of head</span>
         </div>
         <div id="post">
             <h1>Git and GitHub</h1>
