Cambio para hacer un diploy

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+a la<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -9,7 +9,7 @@
 <body>
     <div>
         <head>
-            <h1>Title</h1>
+            <h1>Aquí empieza un gran proyecto</h1>
         </head>
     </div>
 </body>
