Add css images and insert image on the post

--- a/blogspot.html
+++ b/blogspot.html
@@ -14,6 +14,7 @@
         <div id="post">
             <h1>Git and GitHub</h1>
             <p>with Freedy Vega</p>
+            <p><img src="https://image.freepik.com/vector-gratis/ilustracion-concepto-paquete-archivos_114360-2288.jpg" alt="" id="image"></p>
             <p>The blog is the best practice.</p>
             <h1>Suscribe and like</h1>
         </div>
