Quitar letras demás

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-a la<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -10,6 +10,7 @@ a la<!DOCTYPE html>
     <div>
         <head>
             <h1>Aquí empieza un gran proyecto</h1>
+            Git y GitHub
         </head>
     </div>
 </body>
