--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <div>
         <head>
             Experimento 1
+            Experimento 2
             <h1>Aquí empieza un gran proyecto</h1>
             Git y GitHub
             <p>Master 1</p>
