--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         <head>
             <h1>Aquí empieza un gran proyecto</h1>
             Git y GitHub
+            <p>Master 1</p>
         </head>
     </div>
 </body>
