Creando la estructura: Container, Header, Post y Footer.

--- a/index.html
+++ b/index.html
@@ -7,14 +7,17 @@
     <title>Git - GitHub</title>
 </head>
 <body>
-    <div>
-        <head>
-            Experimento 1
-            Experimento 2
+    <div id="container">
+        <div id="cabecera">
             <h1>Aquí empieza un gran proyecto</h1>
-            Git y GitHub
+        </div>
+        <div id="post">
+            <p>Git y GitHub</p>
             <p>Master 1</p>
-        </head>
+        </div>
+        <div id="footer">
+            <p>Awesome</p>
+        </div>
     </div>
 </body>
 </html>
